syntax = "proto3";

option csharp_namespace = "Rs.Net.Core.MyGRPC";

import "model.proto";

package upload;

service Uploader{
	rpc UploadFile(stream FileStream) returns (FileId);
}